# tagliatelle

./: .gitignore  .gitmodules  LICENSE  README.md
src/cpp/: CMakeLists.txt
src/cpp/lib_main/: AttributeCodec.hxx  CMakeLists.txt  EventAttributes.hxx  EventPool.hpp  MainCommands.hpp  TagliatelleApp.cpp  TagliatelleApp.hpp  tagliatelle.cpp  tagliatelle_api.cpp  tagliatelle_api.h
src/cpp/tests/: CMakeLists.txt  PagedArrayTest.cpp  StableTextBufferTest.cpp  WordDictionaryTest.cpp
src/cpp/utils/: DebugMacros.hpp  MutexGuarded.hpp  PagedArray.hpp  Permit.hpp  SizeSensitiveTextStorage.hpp  StableTextBuffer.hpp  StableTextStorageInterfaceConcept.hpp  TrivialTextStorage.hpp  TruncatingTextStorage.hpp  Utils.hpp  WordDictionary.hpp  WordEncoderConcept.hpp
src/flutter/: .gitignore  README.md  pubspec.yaml
src/flutter/linux/: CMakeLists.txt
src/flutter/linux/runner/: my_application.cc
src/flutter/macos/Runner.xcodeproj/: project.pbxproj
src/flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
src/flutter/macos/Runner/Configs/: AppInfo.xcconfig
src/flutter/windows/: CMakeLists.txt
src/flutter/windows/runner/: Runner.rc  main.cpp
